--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇹🇭 泰国-205.3KB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-3.53MB/s(Youtube:不良林), server: 146.56.110.129, port: 53702, type: vmess, uuid: d0ee8ec0-ef63-41aa-9087-11edf7a978b9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.77MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.48MB/s(Youtube:不良林), server: 134.195.198.95, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇩🇪 德国-2.57MB/s(Youtube:不良林), server: 193.108.118.30, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇸🇬 新加坡-3.82MB/s(Youtube:不良林), server: youtube.bai-piao-wang-zhe.567568.ml, port: 443, type: trojan, password: e88cb308-73f7-4302-89bf-b65c7386b117, sni: youtube.bai-piao-wang-zhe.567568.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-4.94MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-338.1KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65081, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-502.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇬🇧 英国-1.04MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-404.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-2.23MB/s(Youtube:不良林), server: 134.195.198.95, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇦 加拿大-2.99MB/s(Youtube:不良林), server: 134.195.198.95, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-2.27MB/s(Youtube:不良林), server: 134.195.198.95, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇨🇳 中国-4.60MB/s(Youtube:不良林), server: ddns.0318.cyou, port: 12345, type: ss, cipher: chacha20-ietf-poly1305, password: 89ab8225-6873-45e9-b0e8-b8aebbfa9945}
+  - {name: 🇨🇳 中国-380.2KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-490.9KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65086, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-1.18MB/s(Youtube:不良林), server: cn2.soow.win, port: 50027, type: vmess, uuid: c1d0ae9e-f08a-3f81-962d-ca19b52c760d, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /video, ws-headers: {Host: cn2.soow.win}}
+  - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇹🇭 泰国-205.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-404.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇹🇭 泰国-205.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-404.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇹🇭 泰国-205.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-404.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇹🇭 泰国-205.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-404.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇹🇭 泰国-205.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-404.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇹🇭 泰国-205.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-404.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇹🇭 泰国-205.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-404.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
