--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-1.04MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-404.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-2.23MB/s(Youtube:不良林), server: 134.195.198.95, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇦 加拿大-2.99MB/s(Youtube:不良林), server: 134.195.198.95, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇦 加拿大-2.27MB/s(Youtube:不良林), server: 134.195.198.95, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-4.60MB/s(Youtube:不良林), server: ddns.0318.cyou, port: 12345, type: ss, cipher: chacha20-ietf-poly1305, password: 89ab8225-6873-45e9-b0e8-b8aebbfa9945}
-  - {name: 🇨🇳 中国-380.2KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-368.1KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-358.2KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.30MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-3.03MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-308.1KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-490.9KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65086, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇨🇳 中国-1.18MB/s(Youtube:不良林), server: cn2.soow.win, port: 50027, type: vmess, uuid: c1d0ae9e-f08a-3f81-962d-ca19b52c760d, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /video, ws-headers: {Host: cn2.soow.win}}
   - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.99MB/s(Youtube:不良林), server: 43.134.229.238, port: 57557, type: vmess, uuid: 7d869c3d-9223-4470-a51c-5c50d41b15cd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.20MB/s(Youtube:不良林), server: 43.134.229.238, port: 20085, type: vmess, uuid: eb35ce5a-7b4d-4fbc-d23f-a57c74872634, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-404.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.20MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-404.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.20MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-404.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.20MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-404.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.20MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-404.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.20MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-404.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.20MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-404.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-490.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.20MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
