--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.25MB/s(Youtube:不良林), server: 134.195.198.95, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇹🇭 泰国-205.3KB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-762.4KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-307.8KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-2.96MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-2.91MB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.99MB/s(Youtube:不良林), server: 43.134.229.238, port: 57557, type: vmess, uuid: 7d869c3d-9223-4470-a51c-5c50d41b15cd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.20MB/s(Youtube:不良林), server: 43.134.229.238, port: 20085, type: vmess, uuid: eb35ce5a-7b4d-4fbc-d23f-a57c74872634, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1001.7KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-315.5KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20713, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-3.46MB/s(Youtube:不良林), server: uk-manchester.eiw2eemo.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: uk-manchester.eiw2eemo.com}}
+  - {name: 🇺🇸 美国-22.08MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.25MB/s(Youtube:不良林), server: 134.195.198.95, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-2.94MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-383.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇮🇳 印度-564.7KB/s(Youtube:不良林), server: in-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: in-01.licom.ml, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-3.09MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-926.3KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-205.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-762.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-307.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1001.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-315.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-564.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.09MB/s(Youtube:不良林)
+      - 🇫🇷 法国-926.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-205.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-762.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-307.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1001.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-315.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-564.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.09MB/s(Youtube:不良林)
+      - 🇫🇷 法国-926.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-205.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-762.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-307.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1001.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-315.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-564.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.09MB/s(Youtube:不良林)
+      - 🇫🇷 法国-926.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-205.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-762.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-307.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1001.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-315.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-564.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.09MB/s(Youtube:不良林)
+      - 🇫🇷 法国-926.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-205.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-762.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-307.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1001.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-315.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-564.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.09MB/s(Youtube:不良林)
+      - 🇫🇷 法国-926.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-205.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-762.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-307.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1001.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-315.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-564.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.09MB/s(Youtube:不良林)
+      - 🇫🇷 法国-926.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-205.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-762.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-307.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1001.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-315.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-564.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.09MB/s(Youtube:不良林)
+      - 🇫🇷 法国-926.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
